2008-10-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/intviewer/viewer-window.cc:
	Internal viewer: set zoom index properly when viewing in normal size

2008-10-18  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	Added signal "dir-changed" (GnomeCmdFileList -> GnomeCmdFileSelector)

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-search-dialog.cc:
	Replaced gnome_cmd_file_list_new() with GnomeCmdFileList::operator new()

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	GnomeCmdFileList: store realize state

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	GnomeCmdFileList: operator for casting to GtkWidget *

	* src/intviewer/viewer-window.cc:
	Internal viewer: new zoom factors (10%, 20%, 33%, 50%, 67%, 100%, 125%, 150%, 200%, 300%, 400%, 500%, 600%, 700%, 800%)

2008-10-16  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-file-selector.cc:
	Invalidate modified file metatada by GnomeCmdDir, not by GnomeCmdFileSelector

	* src/gnome-cmd-file-selector.cc:
	Remove surplus assertions

	* src/gnome-cmd-user-actions.cc:
	Do not assign CTRL+T as a default shortcut to advrename

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	Rename signal "selection-changed" -> "files-changed"

2008-10-15  Piotr Eljasiak  <epiotr@use.pl>

	* src/intviewer/viewer-window.cc:
	Internal viewer: view metatags with both t/T shortcuts

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-options-dialog.cc:
	* src/gnome-cmd-types.h:
	New colour theme: cafezinho

2008-10-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/intviewer/viewer-window.cc:
	Internal viewer - support for metadata tags

	* src/intviewer/viewer-window.cc:
	Internal viewer - new key bindings: T and ALT+ENTER for metadata tags viewing

2008-10-10  Piotr Eljasiak  <epiotr@use.pl>

	* src/intviewer/*.cc: