@@ -14,6 +14,7 @@ Bug fixes:
 New features:
  * Support for PDF metatags in advanced file rename templates
  * Support for metadata tags in internal viewer
+ * Advanced file rename tool - trim blanks
  * New colour theme: cafezinho
  * New or updated docs: de, en, es
  * New or updated translations: ar, de, es, eu, pl
