@@ -1,3 +1,11 @@
+2008-10-24  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/Makefile.am:
+	* src/gnome-cmd-advrename-dialog.cc:
+	* src/gnome-cmd-convert.cc:
+	* src/gnome-cmd-convert.h:
+	Advanced file rename tool - trim blanks
+
 2008-10-21  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/intviewer/viewer-window.cc:
